CJ Functions Modified
Modified CJ Functions

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ LOG\.txt
 Run Dedicated Server.bat
 codjumper\.iwd
 codjumper_misc\.iwd
+ebc-cj.zip
+ht.iwd
+q3config_server.cfg
+qconsole.log.old
+server.cfg
